css/main.css
/* ... */
.input100 {
  display: block;
  width: 100%;
  background: #f5f5f5;
  height: 100%;
  border-radius: 25px;
  padding: 0 20px;
  text-align: center;
}

.focus-input100 {
  content: '';
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  border-radius: 35px;
  box-shadow: 0px 0px 0px 0px;
  /* color: rgba(0,178,111, 0.5); */
}

.input100:focus + .focus-input100 {
  -webkit-animation: anim-shadow 0.5s ease-in-out forwards;
  animation: anim-shadow 0.5s ease-in-out forwards;
}

@-webkit-keyframes anim-shadow {
  to {
    box-shadow: 0px 0px 80px 30px;
    opacity: 0;
  }
}

@keyframes anim-shadow {
  to {
    box-shadow: 0px 0px 80px 30px;
    opacity: 0;
  }
}


/*------------------------------------------------------------------
[ Alert validate ]*/

.validate-input {
  position: relative;
}

.alert-validate::before {
  content: attr(data-validate);
  position: absolute;
  max-width: 70%;
  background-color: #fff;
  border: 1px solid #c80000;
  border-radius: 16px;
  padding: 5px 30px 6px 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 12px;
  pointer-events: none;

  font-family: Poppins-Bold;
  color: #c80000;
  font-size: 12px;
  line-height: 1.4;
  text-align: left;

  visibility: hidden;
  opacity: 0;

  -webkit-transition: opacity 0.4s;
  -o-transition: opacity 0.4s;
  -moz-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

.alert-validate::after {
  content: "\f06a";
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
  display: block;
  position: absolute;
  color: #c80000;
  font-size: 16px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 18px;
}

.alert-validate:hover:before {
  visibility: visible;
  opacity: 1;
}

@media (max-width: 992px) {
  .alert-validate::before {
    visibility: visible;
    opacity: 1;
  }
}

/*//////////////////////////////////////////////////////////////////
[ RS Flip Clock ]*/

/* Mobile-first base styles for flip clock */
@media (max-width: 768px) {
  .flip-clock-wrapper {
    flex-wrap: nowrap !important;
    overflow-x: hidden; /* Remove horizontal scroll */
    -webkit-overflow-scrolling: touch;
    justify-content: flex-start !important;
    width: 100%;
    max-width: 100%;
    margin-left: 0;
    margin-right: 0;
  }
  
  .flip-clock-wrapper ul,
  .flip-clock-divider {
    flex-shrink: 0 !important;
  }
  
  /* Ensure content container alignment */
  .respon1 {
    padding-right: 15px !important;
  }
  
  .respon3 {
    width: 100%;
    max-width: 100%;
  }
  
  /* Prevent text from breaking layout */
  .l1-txt1, .l1-txt2 {
    word-break: break-word;
    hyphens: auto;
  }
  
  /* Ensure social icons stay in one row */
  nav.flex-w {
    flex-wrap: nowrap;
    gap: 4px;
  }
}

.flip-clock-wrapper {
  display: flex;
  flex-wrap: nowrap; /* Prevent wrapping to keep all items in one line */
  position: relative;
  max-width: 100%;
  margin: 0;
  margin-bottom: 20px;
  justify-content: flex-start; /* Align to left */
  align-items: center;
  overflow-x: auto; /* Allow horizontal scroll if needed */
  gap: 1px; /* Small consistent gap between elements */
}

.flip-clock-wrapper .flip {
  box-shadow: none;
  margin-bottom: 50px;
}

.flip-clock-wrapper ul {
  position: relative;
  float: unset;
  margin: 2px;
  width: 41px;
  height: 54px;
  font-size: 36px;
  font-weight: unset;
  line-height: unset;
  border-radius: 3px;
  background: #E6411C;
}

.flip-clock-wrapper ul li {
  line-height: unset;
}

.flip-clock-wrapper ul li a div {
  outline: none;
}

.flip-clock-wrapper ul li a div div.inn {
  font-family:  Aldrich-Regular;
  color: #fff;
  font-size: 35px;
  font-weight: unset;
  text-align: unset;

  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 200%;
  text-shadow: 0 0px 0px #000;
  background-color: #E6411C;
  border-radius: 3px;
} 

.flip-clock-wrapper ul li a div .shadow {
  border-radius: 3px;
}

.flip-clock-wrapper ul li a div.up:after {
  display: none;
}

/*---------------------------------------------*/
.flip-clock-divider {
  display: block;
  float: unset;
  position: relative;
  width: 26px;
  height: 54px;
}

.flip-clock-divider span {
  display: none;
}

.flip-clock-divider::before {
  content: ":";
  font-family: Aldrich-Regular;
  color: #fff;
  font-size: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.flip-clock-divider.days::before {
  display: none;
}

.flip-clock-divider::after {
  font-family: Poppins-Regular;
  color: #fff;
  font-size: 12px;
  text-transform: uppercase;

  display: block;
  text-align: center;
  width: 90px;
  position: absolute;
  left: 100%;
  top: 100%;
  padding-top: 16px;
}

.flip-clock-divider.days::after {
  content: "days";
}

.flip-clock-divider.hours::after {
  content: "hrs";
}

.flip-clock-divider.minutes::after {
  content: "min";
}

.flip-clock-divider.seconds::after {
  content: "sec";
}
/* ... */

